[project]
name = "4imask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imutils>=0.5.4",
    "onnx>=1.18.0",
    "onnxruntime>=1.22.1",
    "opencv-python>=4.12.0.88",
    "openvino>=2025.2.0",
    "pyqtdarktheme>=2.1.0",
    "pyside6>=6.9.1",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "ultralytics>=8.3.169",
]
